Locomotion System page / Minor revisions

--- a/2D Controller/HTML/CLASSES/MANUAL/CHARACTER-MOVEMENT/character-movement.html
+++ b/2D Controller/HTML/CLASSES/MANUAL/CHARACTER-MOVEMENT/character-movement.html
@@ -49,9 +49,9 @@
                 <td class="description">
                     Curve of the character's desceleration.
                     <br>
-                    It's important to note that the deceleration intensity progresses from 0 to 1 along the vertical axis of the curve and not from 1 to 0 as
-                    it could be expected. Ensure that your adjustments reflect this progression, starting from minimal deceleration and increasing to maximum
-                    deceleration as needed. 
+                    It's important to note that the deceleration intensity <b>progresses</b> from <b>0</b> to <b>1</b> along the vertical axis of the curve
+                    and not from 1 to 0 as it may be expected. Ensure that your adjustments reflect this progression, starting from minimal deceleration and
+                    increasing to maximum deceleration as needed. 
                 </td>
             </tr>
             <tr>
