--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/humanoid-controller.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/humanoid-controller.html
@@ -110,6 +110,44 @@
         </div>
 
         <div class="table-division">
+            <span class="table-title">Protected Methods</span>
+            <table>
+                <tr>
+                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/flip-character.html">FlipCharacter</a></td>
+                    <td class="description">Reorients the character to face the specified horizontal direction.</td>
+                </tr>
+                <tr>
+                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/change-horizontal-velocity.html">ChangeHorizontalVelocity</a></td>
+                    <td class="description">Changes the character's horizontal velocity based on the provided direction.</td>
+                </tr>
+                <tr>
+                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/try-jumping.html">TryJumping</a></td>
+                    <td class="description">Attempts to make the character jump based on certain conditions.</td>
+                </tr>
+                <tr>
+                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/try-dashing.html">TryDashing</a></td>
+                    <td class="description">Attempts to make the character perform a dash based on certain conditions.</td>
+                </tr>
+                <tr>
+                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/ledge-grab.html">LedgeGrab</a></td>
+                    <td class="description">Handles the logic for ledge grabbing, allowing customization of conditions.</td>
+                </tr>
+                <tr>
+                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/ledge-climb.html">LedgeClimb</a></td>
+                    <td class="description">Handles the logic for ledge climbing, allowing customization of conditions.</td>
+                </tr>
+                <tr>
+                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/try-floor-slide.html">TryFloorSlide</a></td>
+                    <td class="description">Handles the logic for initiating and exiting floor sliding.</td>
+                </tr>
+                <tr>
+                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/wall-slide.html">WallSlide</a></td>
+                    <td class="description">Handles the logic for wall sliding.</td>
+                </tr>
+            </table>
+        </div>
+
+        <div class="table-division">
             <span class="table-title">Public Properties</span>
             <table>
                 <tr>
@@ -167,45 +205,15 @@
             <span class="table-title">Public Methods</span>
             <table>
                 <tr>
-                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/flip-character.html">FlipCharacter</a></td>
-                    <td class="description">Reorients the character to face the specified horizontal direction.</td>
+                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/respawn.html">Respawn</a></td>
+                    <td class="description">Resets necessary values when the character respawns.</td>
                 </tr>
                 <tr>
-                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/change-horizontal-velocity.html">ChangeHorizontalVelocity</a></td>
-                    <td class="description">Changes the character's horizontal velocity based on the provided direction.</td>
-                </tr>
-                <tr>
-                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/try-jumping.html">TryJumping</a></td>
-                    <td class="description">Attempts to make the character jump based on certain conditions.</td>
-                </tr>
-                <tr>
-                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/try-dashing.html">TryDashing</a></td>
-                    <td class="description">Attempts to make the character perform a dash based on certain conditions.</td>
-                </tr>
-                <tr>
-                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/ledge-grab.html">LedgeGrab</a></td>
-                    <td class="description">Handles the logic for ledge grabbing, allowing customization of conditions.</td>
-                </tr>
-                <tr>
-                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/ledge-climb.html">LedgeClimb</a></td>
-                    <td class="description">Handles the logic for ledge climbing, allowing customization of conditions.</td>
-                </tr>
-                <tr>
-                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/try-floor-slide.html">TryFloorSlide</a></td>
-                    <td class="description">Handles the logic for initiating and exiting floor sliding.</td>
-                </tr>
-                <tr>
-                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/wall-slide.html">WallSlide</a></td>
-                    <td class="description">Handles the logic for wall sliding.</td>
+                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/reset-air-jump-counter.html">ResetAirJumpCounter</a></td>
+                    <td class="description">Resets the air jump counter back to its default value.</td>
                 </tr>
             </table>
         </div>
-
-        <!-- <p>
-            <h2>Version Information</h2>
-            Unity Compatibility: Compatible with Unity engine.
-            <span>Class Version: <b>1.0</b></span>
-        </p> -->
     </div>    
 </body>
 </html>
