--- a/2D Controller/HTML/combat-system.html
+++ b/2D Controller/HTML/combat-system.html
@@ -372,7 +372,7 @@
                 <ul>
                     <br>
                     <li>
-                        <b>Initiate Animation</b>
+                        <b>Initiate Animation (Optional)</b>
                         <br>
                         Represents the start of the charge attack.
                     </li>
